--- a/Navbar.css
+++ b/Navbar.css
@@ -1,99 +1,97 @@
-*{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   font-family: Arial;
-}
-
-header{
-   width:100%;
-   height: 100px;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-}
-
-
-.logo{
-   top: 2rem;
-   color:#fff;
-   margin-left: 50px;
-   text-transform: uppercase;
-}
-
-.headlogo{
-   margin-top: 20px;
-   height: 8.2vh;
-}
-.Event{
-   color: white;
-   font-size: 1.5rem;
-   margin-top: 1rem;
-   padding-left: 1rem;
-}
-.Event:hover{
-   color: aqua;
-   cursor: pointer;
-}
-.logo:hover{
-cursor: pointer;
-   color: cyan;
-}
-
-
-header ul {
-   flex:1;
-   display: flex;
-   justify-content: flex-end;
-   gap: 2rem;
-   padding-right: 2rem;
-
-}
-header ul li{
-   list-style: none;
-}
-header ul li a{
-   text-decoration: none;
-   color:#fff;
-   font-weight: 400;
-   text-transform: uppercase;
-   padding: 1rem;
-}
-header ul li a:hover{
-  cursor: pointer;
-  color: aqua;
-}
-header .menu{
-   font-size: 2.5em;
-   display: none;
-}
-@media(max-width:1000px){
-   .search-box button{
-       position: absolute;
-   }
-   header ul{
-       position: fixed;
-       top:100px;
-       right: -100%;
-       background: rgba(0,0,0,0.5);
-       height: calc(100vh - 100px);
-       width:50%;
-       flex-direction: column;
-       align-items: center;
-       transition: right 0.5s linear;
-   }
-    
-   header .menu{
-       display: block;
-       width:100px;
-       text-align: center;
-   }
-   #chk1:checked ~ ul{
-       right: 0;
-       
-   }
+/* *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial;
+ } */
  
-}
-
-
-
+ header{
+   font-family: Arial;
+    width:100%;
+    height: px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ }
+ 
+ 
+ .logo{
+    margin-top: -18px;
+    color:#fff;
+    margin-left: 50px;
+    text-transform: uppercase;
+ }
+ 
+ .headlogo{
+    margin-top: 20px;
+    height: 8.2vh;
+ }
+ .Event{
+    color: white;
+    font-size: 1.5rem;
+    margin-top: 1rem;
+    padding-left: 1rem;
+ }
+ .Event:hover{
+    color: aqua;
+    cursor: pointer;
+ }
+ .logo:hover{
+ cursor: pointer;
+    color: cyan;
+ }
+ 
+ 
+ header ul {
+    flex:1;
+    display: flex;
+    justify-content: flex-end;
+    gap: 2rem;
+    padding-right: 2rem;
+ 
+ }
+ header ul li{
+    list-style: none;
+ }
+ header ul li a{
+    text-decoration: none;
+    color:#fff;
+    font-weight: 400;
+    text-transform: uppercase;
+    padding: 1rem;
+ }
+ header ul li a:hover{
+   cursor: pointer;
+   color: aqua;
+ }
+ header .menu{
+    font-size: 2.5em;
+    display: none;
+ }
+ @media(max-width:1000px){
+    .search-box button{
+        position: absolute;
+    }
+    header ul{
+        position: fixed;
+        top:100px;
+        right: -100%;
+        background: rgba(0,0,0,0.5);
+        height: calc(100vh - 100px);
+        width:50%;
+        flex-direction: column;
+        align-items: center;
+        transition: right 0.5s linear;
+    }
+     
+    header .menu{
+        display: block;
+        width:100px;
+        text-align: center;
+    }
+    #chk1:checked ~ ul{
+        right: 0;
+        
+    }
+  
+ }
